<resources>
    <string name="app_name">AR shayari</string>
    <string name="next">next</string>
    <string name="exit">Exit</string>
    <string name="todo">TODO</string>
    <string name="_1">1.हाथ में तलवार है जुबां तेज़ धार है,फिर भी चुप हूँ क्यूंकि ये मेरे पापा के दिए संस्कार हैं।</string>
    <string name="_3">3.सुधरी हैं तो बस मेरी आदतें वरना शौक तोआज भी आपकी औकात से ऊंचे हैं।</string>
    <string name="_4">4.जो मुझसे नफरत करते हैं शौक से करें,मैं भी हर शख्स को मोहब्बत के काबिल नही समझता।।</string>
    <string name="_5">5.हमको जंजीरो में कैद करने का सपना मत देख,क्युंकि हम वो आदमखोर शेर हैं,जिसका भी शिकार करतें हैं,उसका जिस्म तो क्या रूह भी दम तोड़ देती हैं।</string>
    <string name="_6">6.खौफ तो आवारा कुत्ते भी मचाते हैंपर दहशत हमेशा शेर की ही रहती है।</string>
    <string name="_2">2.हम जमाने का ख्याल नहीं करते,जहां जमीर न माने वहाँ सलाम नहीं करते।</string>
    <string name="_7">7.औकात की बात मत कर ऐ दोस्तलोग तेरी बन्दूक से ज्यादामेरी आँखों से डरते है।</string>
    <string name="_8">8.लोग वाकिफ हैं, मेरी आदतो से,रूतबा कम ही सही पर लाजवाब रखता हूँ।</string>
    <string name="_9">9.जिसको जो कहना है कहने दो,अपना क्या जाता है,ये वक्त वक्त की बात है,और वक्त सबका आता है।</string>
    <string name="_12">12.मिल जाए आसानी से उसकी ख्वाहिश किसे है,जिद तो उसकी है जो मुक़द्दर में ही नहीं है।</string>
    <string name="_10">10.अगर हमसे मिलना हो तो ज़्यादा गहरे पानी मे आना,बेशकीमती ख़ज़ाने कभी किनारे पर नहीं मिला करते</string>
    <string name="_11">11.बदलना चाहते हो तो शौक से बदलो,मगर इतना याद रखना,जो हम बदले तो करवटें बदलते रह जाओगे।</string>
    <string name="_13">13.रिश्तों से आज़ाद मैं, नखरों की गुलामी नही करता,मुंह पर सच बोलता हूं, पीठ पीछे बदनामी नही करता।</string>
    <string name="_14">14.काली जिंदगी काला काम हैएक नाम है वो भी बदनाम है।</string>
    <string name="_15">15.हर किसी को मैं खुश रख सकूं वो सलीका मुझे नहीं आता..जो मैं नहीं हूँ, वो दिखने का तरीका मुझे नहीं आता।</string>
    <string name="back">back</string>
    <string name="romantic">romantic</string>
    <string name="motivation">motivation</string>
    <string name="attitude">attitude</string>
</resources>