<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20sp"
    android:background="@drawable/gradient3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".third">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100sp"
            android:layout_marginTop="10sp"
            android:text="@string/back"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_1"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_3"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:background="@drawable/reactangle"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_10"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:textStyle="bold"
            android:text="@string/_11"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_12"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_13"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:textStyle="bold"
            android:text="@string/_14"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reactangle"
            android:text="@string/_15"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />







    </LinearLayout>































</ScrollView>