<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".second">

<Button
    android:id="@+id/btn3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="back"
    tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-45sp"
        android:layout_marginLeft="280sp"
        android:text="@string/exit"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attitude"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center" />


    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/romantic"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center" />


    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motivation"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center" />


</LinearLayout>